--- a/package.json
+++ b/package.json
@@ -1,6 +1,14 @@
 {
   "devDependencies": {
+    "@swc/core": "^1.3.95",
+    "@swc/jest": "^0.2.29",
+    "@types/jest": "^29.5.6",
     "@types/node": "^20.8.8",
+    "jest": "^29.7.0",
+    "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
+  },
+  "scripts": {
+    "test": "jest --watch"
   }
 }
